# Big_RoverCarControl

./: README.md
devel/: .catkin  .rosinstall
devel/include/car_control/: corner.h  rover.h
devel/include/ecm_bridge/: driverCmd.h  driverState.h
devel/lib/car_control/: joy_listener.py  rover_control  spawn_turtle  test_listener
devel/lib/ecm_bridge/: ecm_bridge_node
devel/lib/ecm_xf/: ecm_xf_node  test_node
devel/lib/pkgconfig/: car_control.pc  ecm_bridge.pc  ecm_xf.pc
devel/lib/python3/dist-packages/car_control/msg/: __init__.py  _corner.py  _rover.py
devel/lib/python3/dist-packages/ecm_bridge/msg/: __init__.py  _driverCmd.py  _driverState.py
devel/share/car_control/cmake/: car_control-msg-paths.cmake  car_controlConfig.cmake
devel/share/common-lisp/ros/car_control/msg/: _package.lisp  _package_corner.lisp  _package_rover.lisp  car_control-msg.asd  corner.lisp  rover.lisp
devel/share/common-lisp/ros/ecm_bridge/msg/: _package.lisp  _package_driverCmd.lisp  _package_driverState.lisp  driverCmd.lisp  driverState.lisp  ecm_bridge-msg.asd
devel/share/ecm_bridge/cmake/: ecm_bridge-msg-paths.cmake  ecm_bridgeConfig.cmake
devel/share/ecm_xf/cmake/: ecm_xfConfig.cmake
devel/share/gennodejs/ros/car_control/msg/: _index.js  corner.js  rover.js
devel/share/gennodejs/ros/ecm_bridge/msg/: _index.js  driverCmd.js  driverState.js
devel/share/roseus/ros/car_control/: manifest.l
devel/share/roseus/ros/car_control/msg/: corner.l  rover.l
devel/share/roseus/ros/ecm_bridge/: manifest.l
devel/share/roseus/ros/ecm_bridge/msg/: driverCmd.l  driverState.l
src/car_control/: CMakeLists.txt
src/car_control/launch/: car_control.launch  car_ctrl.launch  turtle_ctrl.launch
src/car_control/msg/: corner.msg  rover.msg
src/car_control/scripts/: joy_listener.py  test_phaseunwrap.py  tune_dyhnamic.py  tune_dynamic.py
src/car_control/src/: damp_.hpp  ecm_.hpp  main.cpp  main_draft.cpp  msg_.hpp  multi_turtle.cpp  test_listener.cpp
src/car_control/src/spine/: CMakeLists.txt  Makefile  cmake_install.cmake  dynamixel_motor.cpp  dynamixel_motor.h  minicheetah_motor.cpp  socketcan.cpp
src/ecm_bridge/: CMakeLists.txt
src/ecm_bridge/include/: shadesmar.h
src/ecm_bridge/msg/: driverCmd.msg  driverState.msg
src/ecm_bridge/src/: ecm_bridge_node.cpp
src/ecm_xf/: CMakeLists.txt  package.xml
src/ecm_xf/include/: crc16.h
src/ecm_xf/src/: ecm_xf_node.cpp  test_node.cpp
